Fix section 4 alignment

--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ li {
 
 .pic-headline {
   color: #fff;
-  font-size: 105%;
+  font-size: 1em;
   padding: 0 0 0 20px;
   margin: 5px 0;
 }
